<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".start.presentation.choice.ChoiceFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/register"
        android:textColor="@color/text_color"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textColor="@color/text_color"
        app:cornerRadius="8dp"
        app:strokeColor="@color/active_color"
        app:strokeWidth="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/or"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_vk_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login_vk"
        android:textColor="@color/text_color"
        app:cornerRadius="8dp"
        app:strokeColor="@color/active_color"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_google_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login_google"
        android:textColor="@color/text_color"
        app:cornerRadius="8dp"
        app:strokeColor="@color/active_color"
        app:strokeWidth="2dp" />


</LinearLayout>