<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/profile_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_margin="16dp"
            android:id="@+id/avatar_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            tools:src="@drawable/river"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/name_user_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Владислав"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="keocer@gmail.com"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_color"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/my_events"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="16dp"
                android:id="@+id/my_events_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="horizontal" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/my_tickets"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="16dp"
                android:id="@+id/my_tickets_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="horizontal" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/my_favorite_categories"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_1"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Здоровье и спорт"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_2"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Игры"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_3"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Животные"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_4"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Тусовки"/>
            </com.google.android.material.chip.ChipGroup>

            <androidx.constraintlayout.utils.widget.MotionButton
                android:layout_marginTop="16dp"
                android:id="@+id/exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/exit"
                android:textColor="@color/text_color"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>